add initial unit test and doc with swagger updated
